--- a/app/assets/stylesheets/partials/fly.scss
+++ b/app/assets/stylesheets/partials/fly.scss
@@ -2,10 +2,6 @@
 	.table {
 		margin-bottom: 0; 
 	}
-	.table-thick-border {
-		border-width: 5px;
-	}
-
 	.added-input {
 		margin-bottom: 10px;
 	}
